# conan-training2

./: .gitignore  README.md
.github/workflows/: tests.yml
lesson1/: CMakeLists.txt  README.md  test.bat  test.sh
lesson1/src/: main.cpp
lesson10/: conanfile.py  test.bat  test.ps1  test.sh
lesson11/: test.ps1
lesson12/: test.bat  test.ps1  test.sh
lesson13/: test.sh
lesson14/: conanfile.py  test.bat  test.ps1  test.sh
lesson15/: test.bat  test.ps1  test.sh
lesson15/development/consumer/: CMakeLists.txt  conanfile.py
lesson15/development/consumer/include/: consumer.h
lesson15/development/consumer/src/: consumer.cpp
lesson15/development/consumer/test_package/: CMakeLists.txt  conanfile.py
lesson15/development/consumer/test_package/src/: example.cpp
lesson16/: CMakeLists.txt  conanfile.py  test.bat  test.ps1  test.sh
lesson17/: CMakeLists.txt  conanfile.py  test.ps1  test.sh
lesson18/: test.ps1  test.sh
lesson19/: test.ps1  test.sh
lesson2/: README.md  test.bat  test.ps1  test.sh
lesson20/: CMakeLists.txt  conanfile.py  test.ps1  test.sh
lesson20/include/: hello.h
lesson20/src/: hello.cpp
lesson20/tests/: CMakeLists.txt  test.cpp
lesson21/: conanfile.txt  test.ps1  test.sh
lesson22/: test.ps1  test.sh
lesson23/: license_deploy.py  test.ps1  test.sh
lesson24/: .conanignore  cmd_info_custom.py  test.ps1  test.sh
lesson25/: conanfile.py
lesson25/hello/: CMakeLists.txt  conanfile.py
lesson25/hello/cmake/: HelloConfig.cmake
lesson26/: conanfile.py  test.ps1  test.sh
lesson27/: settings_user.yml  test.ps1
lesson28/: CMakeLists.txt  settings_user.yml  test.sh
lesson28/src/: hello.cpp
lesson29/: test.ps1  test.sh
lesson3/: CMakeLists.txt  conanfile.py  conanfile_complete.py  test.bat  test.ps1  test.sh
lesson3/src/: main.cpp
lesson4/: CMakeLists.txt  conanfile.py  test.bat  test.ps1  test.sh
lesson5/: test.sh
lesson6/: conanfile.py  test.bat  test.ps1  test.sh
lesson7/: CMakeLists.txt  test.ps1  test.sh
lesson8/: test.bat  test.ps1  test.sh
lesson9/: CMakeLists.txt  conanfile.py  test.bat  test.ps1  test.sh
(+42 files in other folders)
